# routes/swagger.js
@@ -1,8 +1,8 @@
-const swaggerRouter = require("express").Router();
+const router = require("express").Router();
 const swaggerUi = require("swagger-ui-express");
 const swaggerDoc = require("../swagger.json");
 
-swaggerRouter.use("/api-docs", swaggerUi.serve);
-swaggerRouter.get("/api-docs", swaggerUi.setup(swaggerDoc));
+router.use("/api-docs", swaggerUi.serve);
+router.get("/api-docs", swaggerUi.setup(swaggerDoc));
 
-module.exports = swaggerRouter;
+module.exports = router;
